Update pom to new ulisboa nexus address

--- a/pom.xml
+++ b/pom.xml
@@ -16,24 +16,24 @@
 	<distributionManagement>
 		<repository>
 			<id>ulisboa-repo</id>
-			<url>http://nexjen.ulisboa.pt/nexus/content/repositories/releases/</url>
+			<url>http://nexus.ulisboa.pt:8081/nexus/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>ulisboa-repo</id>
-			<url>http://nexjen.ulisboa.pt/nexus/content/repositories/snapshots/</url>
+			<url>http://nexus.ulisboa.pt:8081/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
 	<pluginRepositories>
 		<pluginRepository>
 			<id>ulisboa-repo</id>
-			<url>http://nexjen.ulisboa.pt/nexus/content/groups/public/</url>
+			<url>http://nexus.ulisboa.pt:8081/nexus/content/groups/public/</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<repositories>
 		<repository>
 			<id>ulisboa-repo</id>
-			<url>http://nexjen.ulisboa.pt/nexus/content/groups/public/</url>
+			<url>http://nexus.ulisboa.pt:8081/nexus/content/groups/public/</url>
 		</repository>
 		<repository>
 			<id>fenixedu-maven-repository</id>
