--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -10,9 +11,31 @@
 	<name>ldap-client</name>
 
 	<properties>
+		<java.compilation.release>11</java.compilation.release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
+		<version.org.apache.maven.plugins.maven.compiler.plugin>3.8.0</version.org.apache.maven.plugins.maven.compiler.plugin>
 	</properties>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${version.org.apache.maven.plugins.maven.compiler.plugin}</version>
+					<configuration>
+						<release>${java.compilation.release}</release>
+						<fork>true</fork>
+						<fork>true</fork>
+						<maxmem>2048</maxmem>
+						<meminitial>1024</meminitial>
+						<fork>true</fork>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 	<distributionManagement>
 		<repository>
 			<id>ulisboa-repo</id>
