--- a/pom.xml
+++ b/pom.xml
@@ -38,25 +38,25 @@
 	</build>
 	<distributionManagement>
 		<repository>
-			<id>ulisboa-repo</id>
-			<url>https://nexjen.ulisboa.pt/nexus/content/repositories/releases/</url>
+			<id>qubIT-oss</id>
+			<url>https://repository-oss.omnis.cloud/nexus/repository/releases/</url>
 		</repository>
 		<snapshotRepository>
-			<id>ulisboa-repo</id>
-			<url>https://nexjen.ulisboa.pt/nexus/content/repositories/snapshots/</url>
+			<id>qubIT-oss</id>
+			<url>https://repository-oss.omnis.cloud/nexus/repository/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
 	<pluginRepositories>
 		<pluginRepository>
-			<id>ulisboa-repo</id>
-			<url>https://nexjen.ulisboa.pt/nexus/content/groups/public/</url>
+			<id>qubIT-oss</id>
+			<url>https://repository-oss.omnis.cloud/nexus/repository/releases/</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<repositories>
 		<repository>
-			<id>ulisboa-repo</id>
-			<url>https://nexjen.ulisboa.pt/nexus/content/groups/public/</url>
+			<id>qubIT-oss</id>
+			<url>https://repository-oss.omnis.cloud/nexus/repository/releases/</url>
 		</repository>
 		<repository>
 			<id>fenixedu-maven-repository</id>
